Updates to styling to add yellow shadows and fixed nav bar opacity on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ article.active {
 	background-color: rgba(255, 255, 255, 0.075);
 }
 #profilePicture:hover {
-	box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25), 0 0 0.5em 0 #ff6382;
+	box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25), 0 0 0.5em 0 var(--orange-yellow-crayola, #fff);
 }
 
 .info-content .name {
@@ -317,6 +317,9 @@ article.active {
 	width: max-content;
 	padding: 3px 12px;
 	border-radius: 8px;
+}
+.info-content .title:hover {
+	box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25), 0 0 0.5em 0 var(--orange-yellow-crayola, #fff);
 }
 
 /* Create a horizontal line separator that goes across the div. */
@@ -426,7 +429,7 @@ article.active {
 }
 
 .social-item .social-link:hover {
-	color: var(--light-gray);
+	color: var(--orange-yellow-crayola, #fff);
 }
 
 /* Style the small boxes holding the icons. */
@@ -452,6 +455,9 @@ article.active {
 	border-radius: inherit;
 	z-index: -1;
 }
+.icon-box:hover {
+	box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25), 0 0 0.5em 0 var(--orange-yellow-crayola, #fff);
+}
 
 /* Style how thick the line stroke on the icons are. */
 .icon-box ion-icon {
@@ -476,8 +482,8 @@ article.active {
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	background: hsla(240, 1%, 17%, 0.75);
-	backdrop-filter: blur(10px);
+	background: hsla(240, 1%, 17%, 0.95);
+	/* backdrop-filter: blur(10px); */
 	border: 1px solid var(--jet);
 	border-radius: 12px 12px 0 0;
 	box-shadow: var(--shadow-2);
@@ -498,7 +504,7 @@ article.active {
 }
 .navbar-link:hover,
 .navbar-link:focus {
-	color: var(--light-gray-70);
+	color: var(--white-1, #fff);
 }
 .navbar-link.active {
 	color: var(--orange-yellow-crayola);
@@ -587,6 +593,9 @@ a:active {
 	background: var(--bg-gradient-jet);
 	border-radius: inherit;
 	z-index: -1;
+}
+.service-item:hover {
+	box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25), 0 0 0.5em 0 var(--orange-yellow-crayola, #fff);
 }
 .service-icon-box {
 	margin-bottom: 10px;
@@ -854,6 +863,9 @@ a:active {
 	border-radius: inherit;
 	z-index: -1;
 }
+.content-card:hover {
+	box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25), 0 0 0.5em 0 var(--orange-yellow-crayola, #fff);
+}
 
 .article-title {
 	margin-bottom: 30px;
@@ -974,6 +986,9 @@ a:active {
 
 .skills-list {
 	padding: 20px;
+}
+.skills-list:hover {
+	box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25), 0 0 0.5em 0 var(--orange-yellow-crayola, #fff);
 }
 
 .skills-item:not(:last-child) {
@@ -1725,7 +1740,7 @@ textarea.form-input::-webkit-resizer {
 	}
 
 	.filter-item button:hover {
-		color: var(--light-gray-70);
+		color: var(--white-1, #fff);
 	}
 
 	.filter-item button.active {
